# meituan_tkm_backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.prod.yml  nginx.conf  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: addresses.py  admin.py  auth.py  menu.py  merchant_orders.py  messages.py  notifications.py  orders.py  profile.py  public.py  ratings.py  stores.py  ws.py
app/core/: config.py  database.py  errors.py  security.py  storage.py
app/middleware/: auth.py
app/models/: __init__.py  address.py  menu_category.py  menu_item.py  message.py  notification.py  order.py  otp_code.py  rating.py  refresh_token.py  store.py  store_document.py  user.py
app/repositories/: address_repository.py  menu_repository.py  message_repository.py  notification_repository.py  order_repository.py  otp_repository.py  rating_repository.py  store_repository.py  token_repository.py  user_repository.py
app/schemas/: address.py  admin.py  auth.py  menu.py  message.py  notification.py  order.py  profile.py  public.py  rating.py  store.py
app/services/: auth_service.py  notification_service.py  otp_service.py  print_service.py  receipt_service.py  sms_provider.py  store_hours.py  ws_manager.py
migrations/: env.py
migrations/versions/: 0439c2ff14e1_initial_tables.py  24dcea57a231_add_geolocation_fields_to_addresses.py  2fe7c48d2def_add_addresses_table.py  6a0873425466_add_courier_role_and_orders.py  8b544e35619f_add_store_documents.py  90a1132e493b_add_menu_item_images_table.py  (+9 more)
